--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
   <div class="corpow">
     <div class="ajuste1">
         <img class="ods7logo" src="imagens/ods7logo.png">
+        <p class="textoajuste1">
+            Oque são os ODS?
+Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
+são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
+A ODS número 7 se refere a energia limpa, sustentável eacessível,<br>e assim como os outros 16 objetivos, contém
+ a divisão de objetivos<br> entre ONU e os países, assim como as
+submetas.
+        </p>
     </div>
   </div>
 
