Parte 1 pronta - navbar ainda não 100% funcional

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           <a class="nav-link active" href="#">ODS 7</a>
         </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Oque são</a>
+          <a class="nav-link" href="#ajuste1">Oque são</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Objetivos</a>
+          <a class="nav-link" href="#objetivos">Objetivos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Dados</a>
@@ -73,16 +73,50 @@
 </div>
   <!--FIM DO CARROSSEL-->
   <div class="corpow">
-    <div class="ajuste1">
+    <div id="ajuste1">
         <img class="ods7logo" src="imagens/ods7logo.png">
-        <p class="textoajuste1">
+          <div class="ajustedotexto1">
+            <p class="textoajuste1">
             Oque são os ODS?
-Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
-são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
-A ODS número 7 se refere a energia limpa, sustentável eacessível,<br>e assim como os outros 16 objetivos, contém
- a divisão de objetivos<br> entre ONU e os países, assim como as
-submetas.
+            Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
+            são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
+            A ODS número 7 se refere a energia limpa, sustentável e acessível,<br>e assim como os outros 16 objetivos, contém
+            a divisão de objetivos<br> entre ONU e os países, assim como as
+            submetas.          
+            </p>
+          </div>
+    </div>
+    <div id="objetivos">
+      <div class="ajustetituloobjetivos">
+        <p class="tituloobjetivos"> 
+          Objetivos
         </p>
+        <div class="seteum">
+          <p class="um">
+            7.1
+          </p>
+          <p class="dois">
+            7.2
+          </p>
+          <p class="tres">
+            7.3
+          </p>
+              <div id="demo" class="collapse">
+            Lorem ipsum dolor text....
+            </div>
+            <div class="container mt-3">
+              <h2>Simple Collapsible</h2>
+              <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+              <div id="demo" class="collapse">
+                Nações Unidas
+                Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.
+
+                Brasil
+                Meta mantida sem alteração.
+              </div>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 
