Acordeon - não funcionando

--- a/index.html
+++ b/index.html
@@ -87,37 +87,30 @@
           </div>
     </div>
     <div id="objetivos">
-      <div class="ajustetituloobjetivos">
-        <p class="tituloobjetivos"> 
-          Objetivos
-        </p>
-        <div class="seteum">
-          <p class="um">
-            7.1
-          </p>
-          <p class="dois">
-            7.2
-          </p>
-          <p class="tres">
-            7.3
-          </p>
-              <div id="demo" class="collapse">
-            Lorem ipsum dolor text....
-            </div>
-            <div class="container mt-3">
-              <h2>Simple Collapsible</h2>
-              <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
-              <div id="demo" class="collapse">
-                Nações Unidas
-                Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.
+        <div class="ajustetituloobjetivos">
+                <p class="tituloobjetivos"> 
+                  Objetivos
+                </p>
+                <div class="seteum">
+                  <p class="um">
+                    7.1
+                  </p>
+                  <p class="dois">
+                    7.2
+                  </p>
+                  <p class="tres">
+                    7.3
+                  </p>
+                </div>
+                  <div class="caixadosacordeons">
+                    <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
 
-                Brasil
-                Meta mantida sem alteração.
-              </div>
-            </div>
-        </div>
+                    <div id="demo" class="collapse">
+                    Lorem ipsum dolor text....
+                    </div>
+                </div>
+          </div>
       </div>
-    </div>
   </div>
 
     
