--- a/index.html
+++ b/index.html
@@ -86,31 +86,50 @@
             </p>
           </div>
     </div>
-    <div id="objetivos">
-        <div class="ajustetituloobjetivos">
-                <p class="tituloobjetivos"> 
-                  Objetivos
-                </p>
-                <div class="seteum">
-                  <p class="um">
-                    7.1
+      <div id="objetivos">
+          <div class="ajustetituloobjetivos">
+                  <p class="tituloobjetivos"> 
+                    Objetivos
                   </p>
-                  <p class="dois">
-                    7.2
-                  </p>
-                  <p class="tres">
-                    7.3
-                  </p>
-                </div>
-                  <div class="caixadosacordeons">
-                    <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
+                    <div class="seteum">
+                      <p class="um">
+                        7.1
+                      </p>
+                      <p class="dois">
+                        7.2
+                      </p>
+                      <p class="tres">
+                        7.3
+                      </p>
+                  </div>
+                  <div class="ajusteacordeon1">
+                      <div class="container mt-3">
+                        <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Objetivo 7.1</a>
+                        <div id="demo" class="collapse">
+                          Nações Unidas<br>
+                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
 
-                    <div id="demo" class="collapse">
-                    Lorem ipsum dolor text....
+                        Brasil<br>
+                        Meta mantida sem alteração.
+                        </div>
+                      </div>
                     </div>
-                </div>
+                    <div class="ajusteacordeon2">
+                      <div class="container mt-3">
+                        <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Objetivo 7.2</a>
+                        <div id="demo" class="collapse">
+                          Nações Unidas<br>
+                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
+
+                        Brasil<br>
+                        Meta mantida sem alteração.
+                        </div>
+                      </div>
+                    </div>
+              </div>
           </div>
       </div>
+    </div>
   </div>
 
     
