testando coisas para alinhar os acordeons

--- a/index.html
+++ b/index.html
@@ -91,41 +91,40 @@
                   <p class="tituloobjetivos"> 
                     Objetivos
                   </p>
-                    <div class="seteum">
-                      <p class="um">
-                        7.1
-                      </p>
-                      <p class="dois">
-                        7.2
-                      </p>
-                      <p class="tres">
-                        7.3
-                      </p>
+                  <p class="seteum">
+                    7.1
+                  </p>
+                  <div class="acordeons">
+                      <div class="d-flex justify-content-around mb-3">
+                        <div class="p-2 bg-info"><div class="container mt-3">
+                          <h2>Simple Collapsible</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                          <div id="demo" class="collapse">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          </div>
+                        </div></div>
+                        <div class="p-2 bg-warning"><div class="container mt-3">
+                          <h2>Simple Collapsible</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                          <div id="demo" class="collapse">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          </div>
+                        </div></div>
+                        <div class="p-2 bg-primary"><div class="container mt-3">
+                          <h2>Simple Collapsible</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                          <div id="demo" class="collapse">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          </div>
+                        </div></div>
+                    </div>
                   </div>
-                  <div class="ajusteacordeon1">
-                      <div class="container mt-3">
-                        <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Objetivo 7.1</a>
-                        <div id="demo" class="collapse">
-                          Nações Unidas<br>
-                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
-
-                        Brasil<br>
-                        Meta mantida sem alteração.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="ajusteacordeon2">
-                      <div class="container mt-3">
-                        <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Objetivo 7.2</a>
-                        <div id="demo" class="collapse">
-                          Nações Unidas<br>
-                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
-
-                        Brasil<br>
-                        Meta mantida sem alteração.
-                        </div>
-                      </div>
-                    </div>
               </div>
           </div>
       </div>
