--- a/index.html
+++ b/index.html
@@ -94,35 +94,43 @@
                   <p class="seteum">
                     7.1
                   </p>
+                  <p class="setedois">
+                    7.2
+                  </p>
+                  <p class="setetres">
+                    7.3
+                  </p>
                   <div class="acordeons">
                       <div class="d-flex justify-content-around mb-3">
-                        <div class="p-2 bg-info"><div class="container mt-3">
-                          <h2>Simple Collapsible</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                        <div class="p-2"><div class="container mt-3">
+                          <h2>Objetivo 7.1</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
                           <div id="demo" class="collapse">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Nações Unidas<br>
+                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
+
+                        Brasil<br>
+                        Meta mantida sem alteração.
                           </div>
                         </div></div>
-                        <div class="p-2 bg-warning"><div class="container mt-3">
-                          <h2>Simple Collapsible</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                        <div class="p-2"> <h2>Objetivo 7.2</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
                           <div id="demo" class="collapse">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          </div>
-                        </div></div>
-                        <div class="p-2 bg-primary"><div class="container mt-3">
-                          <h2>Simple Collapsible</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Simple collapsible</a>
+                            Nações Unidas<br>
+                        Até 2030, aumentar substancialmente a participação de energias renováveis na matriz energética global. <br><br>
+
+                        Brasil<br>
+                    Até 2030, manter elevada a participação de energias renováveis na matriz energética nacional.
+                          </div></div>
+                        <div class="p-2"> <h2>Objetivo 7.3</h2>
+                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
                           <div id="demo" class="collapse">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          </div>
-                        </div></div>
+                            Nações Unidas<br>
+                        Até 2030, dobrar a taxa global de melhoria da eficiência energética.<br><br>
+
+                        Brasil<br>
+                        Até 2030, aumentar a taxa de melhoria da eficiência energética da economia brasileira.
+                          </div></div>
                     </div>
                   </div>
               </div>
