--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#objetivos">Objetivos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dados</a>
+          <a class="nav-link" href="#grafico">Dados</a>
         </li>
       </ul>
     </div>
@@ -74,72 +74,123 @@
 </div>
   <!--FIM DO CARROSSEL-->
   <div class="corpow">
-    <div id="ajuste1">
-        <img class="ods7logo" src="imagens/ods7logo.png">
-          <div class="ajustedotexto1">
-            <p class="textoajuste1">
-            Oque são os ODS?
-            Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
-            são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
-            A ODS número 7 se refere a energia limpa, sustentável e acessível,<br>e assim como os outros 16 objetivos, contém
-            a divisão de objetivos<br> entre ONU e os países, assim como as
-            submetas.          
-            </p>
+          <div id="ajuste1">
+              <img class="ods7logo" src="imagens/ods7logo.png">
+                <div class="ajustedotexto1">
+                  <p class="textoajuste1">
+                  Oque são os ODS?
+                  Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
+                  são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
+                  A ODS número 7 se refere a energia limpa, sustentável e acessível,<br>e assim como os outros 16 objetivos, contém
+                  a divisão de objetivos<br> entre ONU e os países, assim como as
+                  submetas.          
+                  </p>
+                </div>
           </div>
-    </div>
-      <div id="objetivos">
-          <div class="ajustetituloobjetivos">
-                  <p class="tituloobjetivos"> 
-                    Objetivos
-                  </p>
-                  <p class="seteum">
-                    7.1
-                  </p>
-                  <p class="setedois">
-                    7.2
-                  </p>
-                  <p class="setetres">
-                    7.3
-                  </p>
-                  <div class="acordeons">
-                      <div class="d-flex justify-content-around mb-3">
-                        <div class="p-2"><div class="container mt-3">
-                          <h2>Objetivo 7.1</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
-                          <div id="demo" class="collapse">
-                            Nações Unidas<br>
-                        Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
+          <div id="objetivos">
+              <div class="ajustetituloobjetivos">
+                      <p class="tituloobjetivos"> 
+                        Objetivos
+                      </p>
+                      <p class="seteum">
+                        7.1
+                      </p>
+                      <p class="setedois">
+                        7.2
+                      </p>
+                      <p class="setetres">
+                        7.3
+                      </p>
+                      <div class="acordeons">
+                          <div class="d-flex justify-content-around mb-3">
+                            <div class="p-2"><div class="container mt-3">
+                              <h2>Objetivo 7.1</h2>
+                              <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
+                              <div id="demo" class="collapse">
+                                Nações Unidas<br>
+                            Até 2030, assegurar o acesso universal, confiável, moderno e a preços acessíveis a serviços de energia.<br><br>
 
-                        Brasil<br>
-                        Meta mantida sem alteração.
-                          </div>
-                        </div></div>
-                        <div class="p-2"> <h2>Objetivo 7.2</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
-                          <div id="demo" class="collapse">
-                            Nações Unidas<br>
-                        Até 2030, aumentar substancialmente a participação de energias renováveis na matriz energética global. <br><br>
+                            Brasil<br>
+                            Meta mantida sem alteração.
+                              </div>
+                            </div></div>
+                            <div class="p-2"> <h2>Objetivo 7.2</h2>
+                              <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
+                              <div id="demo" class="collapse">
+                                Nações Unidas<br>
+                            Até 2030, aumentar substancialmente a participação de energias renováveis na matriz energética global. <br><br>
 
-                        Brasil<br>
-                    Até 2030, manter elevada a participação de energias renováveis na matriz energética nacional.
-                          </div></div>
-                        <div class="p-2"> <h2>Objetivo 7.3</h2>
-                          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
-                          <div id="demo" class="collapse">
-                            Nações Unidas<br>
-                        Até 2030, dobrar a taxa global de melhoria da eficiência energética.<br><br>
+                            Brasil<br>
+                        Até 2030, manter elevada a participação de energias renováveis na matriz energética nacional.
+                              </div></div>
+                            <div class="p-2"> <h2>Objetivo 7.3</h2>
+                              <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse">Expandir conteúdo</a>
+                              <div id="demo" class="collapse">
+                                Nações Unidas<br>
+                            Até 2030, dobrar a taxa global de melhoria da eficiência energética.<br><br>
 
-                        Brasil<br>
-                        Até 2030, aumentar a taxa de melhoria da eficiência energética da economia brasileira.
-                          </div></div>
-                    </div>
+                            Brasil<br>
+                            Até 2030, aumentar a taxa de melhoria da eficiência energética da economia brasileira.
+                              </div></div>
+                        </div>
+                      </div>
                   </div>
-              </div>
+          </div>
+            <img id="grafico" src="imagens/grafico.png">
+            <p class="textografico">Atualmente, a maior fonte de energia do Brasil é a hídrica,<br>
+              proveniente de hidroelétricas, e que é responsável por<br>
+              de 59,9% do fornecimento, seguida pela eólica, com 9,4%,<br>
+              mas que
+              depende do clima.<br>
+              Em todo o mundo, 789 milhões de cidadãos não têm eletricidade em
+              casa.<br>
+              no Brasil, 990 mil pessoas não têm acesso à energia elétrica.
+              <br><br>
+              O país já é um dos que mais utilizam fontes renováveis em sua <br>
+              matriz energética, o que se deve,
+              principalmente,<br> à elevada
+              participação das
+              hidrelétricas na geração<br> de eletricidade
+              e no consumo de etanol em 
+              automóveis.</p>
+              <p class="tituloexemplos">
+                Exemplos de energia limpa, acessível e sustentável 
+              </p>
+              <img class="brasil" src="imagens/brasil.png">
+              <p class="textobrasil">
+                O próprio Brasil é um exemplo de energia limpa,<br>
+                com 57,6% da energia sendo gerada por hidrelétricas.<br>
+                Além disso, o país também possui um futuro<br>
+                promissor com a energia eólica, que gera 11% da<br> 
+                energia do país.
+              </p>
+              <img class="islandia" src="imagens/islandia.png">
+              <p class="textoislandia">
+                A Islândia é um país que está na linha de frente<br> 
+                na energia sustentável, com 95% da energia vindo<br>
+                de forma limpa (nesse caso, a geotérmica).<br>
+
+                A Suécia também possui uma grande quantidade<br>
+                de energia renovável, com mais de 50% de fontes desse<br>
+                tipo, além da promessa de eliminar os combustíveis<br>
+                fósseis até 2050.
+              </p>
+              <p class="tituloheliotermica">
+                Energia solar heliotérmica e fotovoltaica
+              </p>
+              <img class="heliotermica" src="imagens/heliotermica.png">
+              <p class="textoheliotermica">
+                Enquanto a energia fotovoltaica se baseia na radiação<br>
+                mexer com os condutores e semi condutores,<br>
+                a energia heliotérmica usa o calor da radiação para<br> 
+                gerar vapor, que almienta uma turbina, que por sua<br>
+                vez alimenta um gerador, como uma mistura<br>
+                de hidrelétrica e energia fotovoltaica.<br>
+              </p>
+              <img class="footer" src="imagens/footer.png">
           </div>
       </div>
-    </div>
-  </div>
 
-    
+  </div>
 </body>
 </html>
