Correção de texto

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="js/funcoes.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS only -->
@@ -140,7 +141,7 @@
             <img id="grafico" src="imagens/grafico.png">
             <p class="textografico">Atualmente, a maior fonte de energia do Brasil é a hídrica,<br>
               proveniente de hidroelétricas, e que é responsável por<br>
-              de 59,9% do fornecimento, seguida pela eólica, com 9,4%,<br>
+              de 57,6% do fornecimento, seguida pela eólica, com 11%,<br>
               mas que
               depende do clima.<br>
               Em todo o mundo, 789 milhões de cidadãos não têm eletricidade em
