--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="js/funcoes.js" type="text/javascript"></script>
+    <script src="js/conteudo.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS only -->
@@ -79,14 +79,9 @@
           <div id="ajuste1">
               <img class="ods7logo" src="imagens/ods7logo.png">
                 <div class="ajustedotexto1">
-                  <p class="textoajuste1">
-                  Oque são os ODS?
-                  Os Objetivos de Desenvolvimento Sustentável (ODS) <br>
-                  são uma agenda  mundial adotada durante a Cúpula das Nações<br> Unidas sobre o Desenvolvimento Sustentável em setembro de 2015,<br>composta por 17 objetivos e 169 metas a serem atingidos até 2030.<br>
-                  A ODS número 7 se refere a energia limpa, sustentável e acessível,<br>e assim como os outros 16 objetivos, contém
-                  a divisão de objetivos<br> entre ONU e os países, assim como as
-                  submetas.          
-                  </p>
+                  <script>
+                    funcaoConteudo();
+                  </script>
                 </div>
           </div>
           <div id="objetivos">
