--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
   <div class="corpow">
           <div id="ajuste1">
               <img class="ods7logo" src="imagens/ods7logo.png">
-                <div class="ajustedotexto1">
-                  <script>
-                    funcaoConteudo();
-                  </script>
-                </div>
+                  <p class="textoajuste1"><script>texto1();</script></p>
           </div>
           <div id="objetivos">
               <div class="ajustetituloobjetivos">
