Ajuste dos elementos

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               no Brasil, 990 mil pessoas não têm acesso à energia elétrica.
               <br><br>
               O país já é um dos que mais utilizam fontes renováveis em sua <br>
-              matriz energética, o que se deve,
+              matriz energética,<br> o que se deve,
               principalmente,<br> à elevada
               participação das
               hidrelétricas na geração<br> de eletricidade
